--- a/index.css
+++ b/index.css
@@ -40,4 +40,89 @@
   .title {
     background: linear-gradient(240.01deg, #78858C 15.29%, rgba(105, 117, 123, 0) 138.75%);
   }
+
+  .content-block {
+    margin-left: 30px;
+    margin-right: 30px;
+    overflow-x: hidden;
+  }
+  
+  @media(min-width: 900px) {
+    .content-block {
+      margin-left: 50px;
+      margin-right: 50px;
+    }
+  }
+  
+  @media(min-width: 1200px) {
+    .content-block {
+      max-width: var(--content-width);
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+  
+  .hero-banner {
+    padding-top: 20px;
+    padding-bottom: 10px;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .hero-banner h1 {
+    font-size: 56px;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-bottom: 40px;
+  }
+  
+  .hero-banner h2 {
+    border: none;
+    font-size: 40px;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-bottom: 40px;
+  }
+  
+  .hero-banner h3 {
+    color: var(--foreground);
+    font-size: 20px;
+    max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    margin-bottom: 40px;
+  }
+  
+  @media(min-width: 900px) {
+    .hero-banner h3 {
+      max-width: 60%;
+    }
+  }
+  
+  @media(min-width: 1200px) {
+    .hero-banner h3 {
+      max-width: 75%;
+    }
+  }
+  
+  .btn-action-primary {
+    color: #F9FAFB;
+    background: #009AF1;
+    font-weight: 700;
+    line-height: 20px; /* identical to box height */
+  }
+  
+  .btn-action-primary:hover, .btn-action-primary:active, .btn-action-primary:focus {
+    background: #35acf0;
+  }
+  
+  .btn-action {
+    min-width: 165px;
+    border-radius: 8px;
+    padding: 20px 48px;
+    border: none;
+  }
   
